# Hor-rios-de-estudantes-L.EIC

./: CMakeLists.txt  README.md
include/: Aula.h  Estudante.h  Interface.h  Pedido_troca.h  Read_file.h  Read_line.h  Turma.h  Uc.h
src/: Aula.cpp  Estudante.cpp  Interface.cpp  Pedido_troca.cpp  Read_file.cpp  Read_line.cpp  Turma.cpp  Uc.cpp  main.cpp
